tests/reference/ast_new-statements1-e081093.stderr
syntax error: Token ':' is unexpected here
   --> tests/parser/statements1.py:180:18
    |
180 | for item in list1:
    |                  ^ 
